Product images now displaying. Still having issues to be fixed i.e. vertical alignment.

--- a/src/app/store/product-image-slider/product-image-slider.component.css
+++ b/src/app/store/product-image-slider/product-image-slider.component.css
@@ -3,14 +3,6 @@ swiper{
     height: 100%;
     /*box-sizing: border-box;*/
 }
-product-image{
-    width: 100%;
-    height: 100%;
-    max-width: 100%;
-    max-height: 100%;
-    margin: auto;
-    /*box-sizing: border-box;*/
-}
 
 .slider-container{
     width: 100%;
