--- a/src/app/store/product-image/product-image.component.css
+++ b/src/app/store/product-image/product-image.component.css
@@ -3,5 +3,6 @@ div{
     height: 100%;
     max-width: 100%;
     max-height: 100%;
-    /*box-sizing: border-box;*/
+    box-sizing: border-box;
+    display: block;
 }
