--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,13 @@
 @import '~https://fonts.googleapis.com/icon?family=Material+Icons';
 @import "~normalize.css/normalize.css";
 
+html {
+    box-sizing: border-box;
+}
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+
 .background-container{
     width: 100%;
     height: 100%;
